// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SmallModal With Footer Content 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-primary text-3xl font-semibold m-0 mb-4"
    >
      I am a modal
    </h1>
    <h1>
      I'm a child
    </h1>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <h1>
      I'm a footer content
    </h1>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal Without Footer Content 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-primary text-3xl font-semibold m-0 mb-4"
    >
      I am a modal
    </h1>
    <h1>
      I'm a child
    </h1>
  </div>
</div>
`;
